Now there are two forms to init the order entry: one for sales orders and one for purchase orders. I think that now the page is easier to read (without all the javascript stuff) and also it will be easier to hide the sales/purchase form if the user is not allowed to take that kind of order. Bug fixes and cleanups.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4750 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -179,6 +179,7 @@ OrderGiftMessage=Gift Message
 OrderGiftWrapAllItems=Gift Wrap All Items
 OrderGift=Gift?
 OrderGrandTotal=Grand Total
+OrderInProgress=In Progress
 OrderIsThisGift=Is This a Gift?
 OrderIssuedToShipmentItem=Issued to Shipment Item
 OrderItemsOrdered=Items Ordered
