Added patch from Jacques Le Roux to fix some labels; Jira #OFBIZ-186
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4760 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -163,8 +163,8 @@ ProductActualServices=Actual Services
 ProductActualStartArrive=Actual (Start-Arrive)
 ProductActualTotal=Actual Total
 ProductActualTransport=Actual Transport
-ProductAddCatalogProdCat=Add Catalog Product Category (select Category and Type, then enter optional From Date)
-ProductAddCatalogProductCategory=Add Catalog Product Category (select Category and Type, then enter optional From Date)
+ProductAddCatalogProdCat=Add Catalog Product Category (select Catalog and Type, then enter optional From Date)
+ProductAddCatalogProductCategory=Add Catalog Product Category (select Catalog and Type, then enter optional From Date)
 ProductAddContentProduct=Add Content to Product
 ProductAddEmail=Add Email
 ProductAddFacility=Add Facility
