Applied patch from Jacopo for a run-install-seed target in the main build file that only installs seed data, and not demo or ext data; Jira #OFBIZ-192
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4784 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/build.xml
+++ b/build.xml
@@ -242,6 +242,12 @@
             <arg value="install"/>
         </java>
     </target>
+    <target name="run-install-seed" depends="build">
+        <java jar="ofbiz.jar" fork="true">
+            <arg value="install"/>
+            <arg value="readers=seed"/>
+        </java>
+    </target>
     <target name="run-debug" depends="build">
         <java jar="ofbiz.jar"  fork="true">
             <jvmarg value="-Xnoagent"/>
