A bunch of i18n patches from Jean-Luc Malet, plus minor cleanups; Jira #OFBIZ-195
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4800 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -15,36 +15,40 @@ AcctgGlJrnlIdLabel=GL Journal ID:
 AcctgGlJrnlIdToolTip=Non-editable System ID
 
 ListAccounts=List Gl Accounts
-AccountingMainMenu=Main
-AccountingBillingMenu=Billing Accounts
-AccountingInvoicesMenu=Invoices
-AccountingPaymentsMenu=Payments
-AccountingChartOfAcctsMenu=Chart of Accounts
-AccountingManualTxMenu=Manual Tx
-AccountingAgreement=Agreement
-AccountingAgreements=Agreements
-AccountingNewAgreement=Create Agreement
-AccountingNewAgreementItem=Create Agreement Item
-AccountingNewAgreementTerm=Create Agreement Term
-AccountingAgreementItems=Agreement Items
-AccountingAgreementTerms=Agreement Terms
+
 AccountingAccount=Account
 AccountingAccountId=Account ID
 AccountingAccountLimit=Account Limit
+AccountingAccountNumber=Account Number
+AccountingAccountType=Account Type
+AccountingAgreement=Agreement
+AccountingAgreementItems=Agreement Items
+AccountingAgreements=Agreements
+AccountingAgreementTerms=Agreement Terms
 AccountingAmount=Amount
 AccountingAnyInvoiceStatus=Any Invoice Status
 AccountingAnyPaymentMethod=Any Payment Method
 AccountingAnyPaymentStatus=Any Payment Status
+AccountingBankName=Bank Name
+AccountingBillingMenu=Billing Accounts
+AccountingBillingAccount=Billing Acct
 AccountingBillingAccountInvoices=Billing Account Invoices
+AccountingBillingAccountOnly=Pay With Billing Account Only
 AccountingBillingAccountPayments=Billing Account Payments
 AccountingBillingAccounts=Billing Accounts
 AccountingBillingAcct=Billing Acct
 AccountingBilling=Billing
 AccountingBillingContactMechId=Billing Contact Mech
 AccountingBillingInformation=AccountingBilling Information
+AccountingBillUpTo=Bill-Up To
 AccountingBothInvoiceIdBillingAccountIdEmptyError=Both invoiceId and billingAccountId cannot be empty
+AccountingCardNumber=Card Number
+AccountingCardType=Card Type
+AccountingChartOfAcctsMenu=Chart of Accounts
 AccountingComments=Comments
 AccountingCompanyName=OFBiz: Accounting Manager
+AccountingCompanyNameAccount=Company Name on Account
+AccountingCompanyNameCard=Company Name on Card
 AccountingCompanySubtitle=Part of the Open For Business Family of Open Source Software
 AccountingCreateBillingAccount=Create Billing Account
 AccountingCreateBillingAccountPermissionError=Security Error: to run createBillingAccount you must have the ACCOUNTING_CREATE or ACCOUNTING_ADMIN permission <br>
@@ -58,6 +62,7 @@ AccountingCreatePayment=Create Payment
 AccountingCreatePaymentPermissionError=Security Error: To Create a Payment you must either be the to or from party or have the PAY_INFO_CREATE or PAY_INFO_ADMIN permissions.
 AccountingCreatePermissionError=Security Error: to run createGlAccount you must have the ACCOUNTING_CREATE or ACCOUNTING_ADMIN permission<br>
 AccountingCreditCard=Credit Card
+AccountingCurrency=Currency
 AccountingDate=Date
 AccountingDateFilter=Date Filter
 AccountingDeleteBillingAccountTermPermissionError=Security Error: to run removeBillingAccountTerm you must have the ACCOUNTING_DELETE or ACCOUNTING_ADMIN permission
@@ -66,8 +71,11 @@ AccountingDueDate=Due Date
 AccountingEditPayment=Edit Payment
 AccountingEffective=Effective
 AccountingEffectiveDate=Effective Date
+AccountingEFTAccount=EFT Account
+AccountingExpirationDate=Expiration Date
 AccountingFindInvoices=Find Invoices
 AccountingFindPayments=Find Payments
+AccountingFirstNameCard=First Name on Card
 AccountingFixedAsset=Fixed Asset
 AccountingFixedAssetCalendar=Calendar
 AccountingFixedAssetEdit=Create/Update Fixed Asset
@@ -93,41 +101,62 @@ AccountingInvoice=Invoice
 AccountingInvoiceItem=Invoice Item
 AccountingInvoiceItems=Invoice Items
 AccountingInvoicesFound=Invoices Found
+AccountingInvoicesMenu=Invoices
 AccountingInvoices=Invoices
 AccountingInvoicePayments=Invoice Payments
 AccountingInvoiceTotal=Invoice Total
+AccountingLastNameCard=Last Name on Card
 AccountingLineTotal=Line Total
 AccountingLookupInvoices=Lookup Invoices
 AccountingLookupPayment=Lookup Payment
+AccountingMainMenu=Main
 AccountingMainPage=Accounting Manager Main Page
 AccountingMainPageNote=NOTE: This application is currently in development. This page will change.
 AccountingManagerApplication=Accounting Manager Application
+AccountingManualTxMenu=Manual Tx
 AccountingMethod=Method
+AccountingMiddleNameCard=Middle Name on Card
 AccountingName=Name
+AccountingNameAccount=Name on Account
 AccountingNewAccount=New Account
+AccountingNewAgreement=Create Agreement
+AccountingNewAgreementItem=Create Agreement Item
+AccountingNewAgreementTerm=Create Agreement Term
 AccountingNewFixedAsset=New Fixed Asset
 AccountingNewPayment=New Payment
+AccountingNoAccount=No Account
+AccountingNoBillingAccount=No Billing Account
 AccountingNoBillingAccountFound=No billing accounts found.
 AccountingNoBillingAccountRole=No billing account roles exist.
 AccountingNoBillingAccountTerm=No billing account terms exist.
 AccountingNocontactinformationset=No contact information set
 AccountingNocurrentinvoicelineitems=No current invoice line items
 AccountingNoInvoicesFound=No Invoices Found
+AccountingNoPaymentMethods=There are no payment methods on file.
 AccountingNoPaymentsfound=No Payments found
+AccountingOfflinePayment=Offline Payment
 AccountingOrders=Orders
 AccountingPaymentDate=Payment Date
 AccountingPayment=Payment
+AccountingPaymentAlreadyReceived=Payment already received
 AccountingPaymentID=PaymentID
+AccountingPaymentInformation=Payment Information
 AccountingPaymentMethodId=Payment Method Id
 AccountingPaymentMethodType=Payment Method Type
 AccountingPaymentPreferenceId=Payment Preference Id
 AccountingPayments=Payments
 AccountingPaymentsFound=Payment(s) Found
+AccountingPaymentsMenu=Payments
 AccountingPaymentType=Payment Type
+AccountingPleaseSendPaymentTo=Please Send Payment To:
+AccountingPrefixCard=Prefix on Card
 AccountingProduct=Product
 AccountingQuantity=Quantity
 AccountingReferenceNumber=Reference Number
+AccountingReceivePayment=Receive Payment
+AccountingRoutingNumber=Routing Number
 AccountingStatus=Status
+AccountingSuffixCard=Suffix on Card
 AccountingToParty=To Party
 AccountingToPartyId=To Party Id
 AccountingTotal=Total
@@ -142,6 +171,7 @@ AccountingViewPermissionError=You do not have permission to view this page. ("AC
 
 PageTitleEditBillingAccount=Edit Billing Account
 PageTitleEditBillingAccountInvoices=Edit Billing Account Invoices
+
 PageTitleEditBillingAccountPayments=Edit Billing Account Payments
 PageTitleEditBillingAccountRoles=Edit Billing Account Roles
 PageTitleEditBillingAccountTerms=Edit Billing Account Terms
