--- a/applications/ecommerce/config/EcommerceUiLabels.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels.properties
@@ -71,6 +71,7 @@ EcommerceAlwaysViewCartAfterAddingAnItem=Always view cart after adding an item
 EcommerceAnonymous=Anonymous
 EcommerceAverageRating=Average Rating
 EcommerceCartHas=Cart has
+EcommerceCartItemUseinPromotions=Cart Item Use in Promotions
 EcommerceCartSummary=Cart Summary
 EcommerceCartTotal=Cart Total
 EcommerceCheckout=Checkout
@@ -81,9 +82,12 @@ EcommerceChooseAmount=Choose Amount
 EcommerceChooseVariations=Choose Variation
 EcommerceContinueShopping=Continue Shopping
 EcommerceCustomerReviews=Customer Reviews
+EcommerceEcommerce=Ecommerce
 EcommerceEmptyCart=Empty Cart
+EcommerceErrorNoPromotionFoundWithID=ERROR: No promotion found with ID
 EcommerceGoToList=Go To List
 EcommerceIncludes=Includes
+EcommerceIsAPromotionalItem=Is a Promotional Item
 EcommerceItem=Item
 EcommerceItemN=Item #
 EcommerceItemsfromShopingList=Items from a shopping list; update quantities from list page
@@ -105,17 +109,21 @@ EcommerceNbrPersons=Persons
 EcommerceNewShoppingList=New Shopping List
 EcommerceNoParent=No Parent
 EcommerceNoShoppingListsCreate=No shopping lists to select, create a new one
+EcommerceOfPromotion=of Promotion 
 EcommerceOnSale=On Sale
 EcommerceParentList=Parent List
 EcommercePieces=Pieces
 EcommercePostAnonymous=Post Anonymous
 EcommercePrice=Price
 EcommerceProduct=Product
+EcommerceProductsForPromotion=Products For Promotion
 EcommercePromotion=Promotion
 EcommercePromotionalItems=Promotional items; quantities cannot be modified
+EcommercePromotionDetails=Promotion Details
 EcommercePromotionInformation=Promotion Information
 EcommercePromotionsApplied=Promotions Applied
 EcommercePublic=Public
+EcommerceQuickAdd=Quick Add
 EcommerceRanking=Ranking
 EcommerceRating=Rating (1-5; 5 being best)
 EcommerceRatings=Ratings
@@ -146,14 +154,6 @@ EcommerceYouMightLike=You Might Like
 EcommerceYouMust=You Must&nbsp;
 EcommerceYourPrice=Your Price
 EcommerceYourShoppingCartEmpty=Your shopping cart is empty
-
-EcommerceCartItemUseinPromotions=Cart Item Use in Promotions
-EcommerceIsAPromotionalItem=Is a Promotional Item
-EcommerceOfPromotion=of Promotion 
-EcommerceViewAllPromotions=View All Promotions
-EcommercePromotionDetails=Promotion Details
-EcommerceProductsForPromotion=Products For Promotion
-EcommerceErrorNoPromotionFoundWithID=ERROR: No promotion found with ID
 
 OrderAdjustments=Adjustments
 OrderAdvancePayment=Advance Payment
