--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -58,13 +58,15 @@ PageTitleViewPartyRole=View Party Roles
 PageTitleViewVendorParty=View Vendor Party Info
 PageTitleVisitDetail=Visit Detail
 PageTitleVisitList=Visit List
+
 PartyAccount=Account
+PartyActive=Active
 PartyAddChildListsToCart=Add Child List To Cart
 PartyAddListToCart=Add List To Cart
+PartyAdditionalPartyEntry=Additional Party Entry
 PartyAddPermissionManuallyToSecurityGroup=Add Permission (manually) to SecurityGroup
 PartyAddPermissionToSecurityGroup=Add Permission (from list) to SecurityGroup
 PartyAddProductToList=Add Product To List
-PartyActive=Active
 PartyAddPurpose=Add Purpose
 PartyAddrAttnName=Attn
 PartyAddressLine1=Address Line 1
@@ -78,11 +80,13 @@ PartyAddUserLoginToSecurityGroup=Add UserLogin to this Security Group
 PartyAvsString=AVS String
 PartyAreaCode=Area Code
 PartyAttentionName=Attention Name
+PartyBank=Bank
 PartyBirthDate=Birth Date
 PartyBirthDateMissingError=Birthdate is not formatted correctly: must be yyyy-mm-dd, like 1982-07-21
-PartyBank=Bank
+PartyBusinessPhone=Business Phone
 PartyChildShoppingList=Child Shopping List
 PartyCannotUpdateContactBecauseNotWithSpecifiedParty=ERROR: Cannot update specified contact info because it does not correspond to the specified party.
+PartyChangeParty=Change Party
 PartyCity=City
 PartyCityMissing=City is missing
 PartyClient=Client
@@ -140,6 +144,7 @@ PartyEnterPasswordTwice=You must enter your password twice
 PartyEventPurpose=Event Purpose(s)
 PartyEventType=Event Type
 PartyFindParties=Find Parties
+PartyFindParty=Find Party
 PartyFirstName=First Name
 PartyFirstNameMissing=Firstname is Missing
 PartyFollowSession=Follow Session 
@@ -150,6 +155,7 @@ PartyHeight=Height
 PartyHeightNotValidNumber=Height is not a valid number
 PartyHideOld=Hide Old
 PartyHitTracker=Hit Tracker
+PartyHomePhone=Home Phone
 PartyInformationNotFound=Information Not Found
 PartyInitialLocale=Initial Locale
 PartyInitialReferer=Initial Referer
@@ -161,6 +167,7 @@ PartyLastVisit=Last Visit(s)
 PartyListItems=List Items
 PartyListName=List Name
 PartyListType=List Type
+PartyLookupParty=Lookup Party
 PartyManagerApplication=Party Manager Application
 PartyManifestCompanyName=Manifest Company Name
 PartyManifestCompanyTitle=Manifest Company Title
@@ -169,6 +176,7 @@ PartyManifestPolicies=Manifest Policies
 PartyMaritalStatus=Marital Status
 PartyMechPurposeTypeNotFound=Purpose Type not found with ID
 PartyMemberRoles=Member Roles
+PartyMiddleInitial=Middle Initial
 PartyMgrViewPermissionError=PartyMgrViewPermissionError You do not have permission to view this page. ("PARTYMGR_VIEW" or "PARTYMGR_ADMIN" needed)
 PartyMothersMaidenName=Mothers Maiden Name
 PartyMsgContactHavePurpose=Note: this new contact information will have the purpose
@@ -192,6 +200,7 @@ PartyNoPartyRolesFound=No party roles found.
 PartyNoPaymentMethodInformation=No payment method information on file.
 PartyNoShoppingCartSavedForParty=No shopping cart saved for party
 PartyNoShoppingListsParty=No Shopping lists for party
+PartyNoSupplier=No Supplier
 PartyNotModifRecreatSecurityGroup=This cannot be changed without re-creating the securityGroup.
 PartyNoUserLogin=No UserLogin(s) found for this party.
 PartyNoVisitFound=No Visit(s) found for this party.
@@ -206,6 +215,7 @@ PartyParty=Party
 PartyPartyFrom=Party From
 PartyPartyId=Party ID
 PartyPartyIDUserLoginID=PartyID / UserLoginID
+PartyPartyNotDefined=Party not defined
 PartyPartyTo=Party To
 PartyPassportExpire=Passport Expire
 PartyPassportExpireDateNotValidDate=Passport Expire Date is not a valid Date
@@ -243,8 +253,10 @@ PartyRemovePostalAddressBoundaryPermissionError=Security Error: to run deletePos
 PartyRemoveWebSiteRolePermissionError=Security Error: to run removeWebSiteRole you must have the PARTYMGR_DELETE or PARTYMGR_ADMIN permission
 PartyReply=Reply
 PartyReplyPrefix=RE:
+PartyRole=Role
 PartyRoleTypeFrom=RoleType From
 PartyRoleTypeId=RoleType ID
+PartyRoleType=Role Type
 PartyRoleTypeTo=Role Type To
 PartyRoles=Role(s)
 PartySecurityGroups=Security Groups
@@ -252,6 +264,7 @@ PartySecurityGroupId=Security Group ID
 PartySecurityGroupsList=SecurityGroups List
 PartySecurityViewPermissionError=PartySecurityViewPermissionError You do not have permission to view this page. ("SECURITY_VIEW" or "SECURITY_ADMIN" needed)
 PartySelectContactType=Select Contact Type
+PartySelectcRoleForParty=Select role(s) for this party
 PartySequenceId=Sequence Id 
 PartyServer=Server
 PartyServiceNotForPostalAddress=This service (createContactMech) should not be used for POSTAL_ADDRESS type ContactMechs, use the createPostalAddress service
@@ -270,6 +283,8 @@ PartyStateInUsMissing=State is missing, and is required for an address in the Un
 PartyStatus=Status
 PartyStillActive=Still Active
 PartySubject=Subject
+PartySuffix=Suffix
+PartySupplier=Supplier
 PartyTerm=Term
 PartyTermTyp=Term Type
 PartyTermValue=Term Value
@@ -304,6 +319,10 @@ PartyWeightNotValidNumber=Weight is not a valid number
 PartyWebApp=WebApp
 PartyYearsWork=Years Work
 PartyZipCode=Zip/Postal Code
+
+
+
+
 
 
 partyrelationshipservices.cannot_create_party_relationship_partyIdTo_null=Cannot create party relationship, partyIdTo cannot be null.
