--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -186,6 +186,7 @@ ProductAddProductFeatureFromCategory=Add Product Feature From Category or Group
 ProductAddProductFeatureFromGroup=Add Product Feature From Group
 ProductAddProductFeatureTypeId=Add Product Feature with Type and ID Code
 ProductAddProductKeyword=Add product keyword
+ProductAddProductsUsingDefaultQuantities=Add Products in this Category to the Cart using Default Quantities
 ProductAddPromoRule=Add New Promo Rule
 ProductAddresses=Addresses
 ProductAddRouteSegmentInfo=Add Route Segment Info
@@ -193,6 +194,8 @@ ProductAddStorePromo=Add Store Promo (select Store, enter optional From Date)
 ProductAddStorePromoOptionalDate=Add Store Promo (select Promo, enter optional From Date)
 ProductAddToPackage=Add to Package
 ProductAdvancedSearch=Advanced Search
+ProductAdvancedSearchIn=Advanced Search in
+ProductAdvancedSearchinCategory=Advanced Search in Category
 ProductAisle=Aisle
 ProductAlternate=Alternate
 ProductAlternateKeyWordThesaurus=Alternate KeyWord Thesaurus
@@ -257,6 +260,7 @@ ProductCategory_Id=Category [ID]
 ProductCategoryId=Category ID
 ProductCategoryImageUrl=Category Image URL
 ProductCategoryMembers=Category Members
+ProductCategoryNotFoundforCategoryID=Category not found for Category ID
 ProductCategoryPage=Category Page
 ProductCategoryRollupChildCategories=Category Rollup \: Child Categories
 ProductCategoryRollupParentCategories=Category Rollup \: Parent Categories
@@ -268,11 +272,13 @@ ProductCheckInventory=Check Inventory
 ProductChildCategoryId=Child Category ID
 ProductChild=Child
 ProductChildGroupId=Child Group ID
+ProductChooseCatalog=Choose Catalog
 ProductChooseFeatureCategory=Choose a Feature Category
 ProductChooseFeatureGroup=Choose a Feature Group
 ProductChooseTopCategory=Choose Top Category
 ProductComments=Comments
 ProductCompanySubtitle=Part of the Open For Business Family of Open Source Software
+ProductCompareAtPrice=Compare At
 ProductComponents=Components
 ProductConditions=Conditions
 ProductConfirmSelectedMoves=Confirm selected moves
@@ -343,9 +349,11 @@ ProductEditInventoryItemWithId=Edit Inventory Item with ID
 ProductEditProduct=Edit Product
 ProductEditProductWithProductId=Edit Product with Product ID
 ProductEditShipment=Edit Shipment
+ProductEntireCatalog=Entire Catalog
 ProductErrorFacility=Error\: facility
 ProductErrorNoPackagesFoundForShipment=ERROR: No packages found for this shipment
 ProductErrorOrderIdNotFound=ERROR: Order with ID [${orderId}] not found
+ProductErrorProductNotFound=ERROR\: Product not found
 ProductErrorType=Error\: Type
 ProductEstimatedDates=Estimated Dates
 ProductEstimateId=Estimate ID
@@ -466,6 +474,7 @@ ProductItemProduct=Item : Product
 ProductItems=Items
 ProductItemsIssued=Items Issued
 ProductItemsIssuedReserved=Items Issued or Reserved
+ProductItemOutofStock=This item is out of stock
 ProductItemType=Item Type
 ProductKeyword=Keyword
 ProductKeywords=Keywords
@@ -479,6 +488,7 @@ ProductLastModifiedBy=Last Modified By
 ProductLine=Line
 ProductLinkOneImageUrl=Link One Image URL
 ProductLinkTwoImageUrl=Link Two Image URL
+ProductListPrice=List Price
 ProductLocaleString=Locale String
 ProductLocation=Location
 ProductLocationFor=Location for
@@ -896,6 +906,25 @@ ProductWeight=Weight
 ProductWeightUnit=Weight Unit
 ProductWeightUomId=Weight Uom Id
 ProductWidthUomId=Width Uom Id
+
+
+ProductNoLongerAvailable=No Longer Available
+ProductNoProductsInThisCategory=There are no products in this category
+ProductNoResultsFound=No results found
+ProductNotYetAvailable=Not Yet Available
+ProductProduct=Product
+ProductProductNoLongerAvailable=This product is no longer available for sale
+ProductProductNotFound=Product not found for Product ID
+ProductProductNotReviewedYet=This product hasn't been reviewed yet
+ProductProductNotYetMadeAvailable=This product has not yet been made available for sale
+ProductProductStore=Product Store
+ProductRegularPrice=Regular Price
+ProductSearchCatalog=Search Catalog
+ProductSearchinCategory=Search in Category
+ProductType=Type
+ProductUsuallyShipsIn=Usually ships in
+ProductWebSite=Web Site
+ProductWorkItem=Work Item
 
 
 
