Added some missing labels and corrected a few others. Thanks to Adrian Crum that submitted the patch (OFBIZ-174).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4803 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -88,6 +88,7 @@ ManufacturingMrpInitialisation=IEP init.
 ManufacturingNewCalendar=New calendar
 ManufacturingNewCalendarWeek=New Week
 ManufacturingNewMachineGroup=New machine group
+ManufacturingNewRequirement=New Requirement
 ManufacturingNewRouting=New Routing
 ManufacturingNewRoutingTask=New Routing Task
 ManufacturingNoCalendarFound=No calendar found
@@ -117,23 +118,26 @@ ManufacturingProposedOrder=Proposed Order
 ManufacturingQuantity=Quantity
 ManufacturingQuantityMinimum=Quantity Minimum
 ManufacturingReason=Reason
-ManufacturingRequirementByDate=ManufacturingRequirementByDate
+ManufacturingRequirements=Manufacturing Requirements
+ManufacturingRequirementByDate=Manufacturing Requirement By Date
 ManufacturingRequirementId=RequirementId
-ManufacturingRequirementStartDate=ManufacturingRequirementStartDate
+ManufacturingRequirementStartDate=Manufacturing Requirement Start Date
 ManufacturingRouting=Routing
-ManufacturingRoutingHasNoRoutingTask=Routing has no RoutingTask
+ManufacturingRoutings=Routings
+ManufacturingRoutingHasNoRoutingTask=Routing has no Routing Task
 ManufacturingRoutingId=Routing Id
 ManufacturingRoutingIdMissing=RoutingId is missing
 ManufacturingRoutingName=Routing Name
-ManufacturingRoutingSeqIdFormatNotCorrect=The RoutingSeq Id format is not correct
+ManufacturingRoutingSeqIdFormatNotCorrect=The Routing Seq Id format is not correct
 ManufacturingRoutingSeqIdMissing=Routing SeqId is Missing
-ManufacturingRoutingTask=RoutingTask
-ManufacturingRoutingTaskAssocCreateSuccessfully=RoutingTask association creation successfull
-ManufacturingRoutingTaskCopiedSuccessfully=RoutingTask copied Successfully
+ManufacturingRoutingTask=Routing Task
+ManufacturingRoutingTasks=Manufacturing Routing Tasks
+ManufacturingRoutingTaskAssocCreateSuccessfully=Routing Task association creation successfull
+ManufacturingRoutingTaskCopiedSuccessfully=Routing Task copied Successfully
 ManufacturingRoutingTaskId=Routing Task Id
-ManufacturingRoutingTaskToMissing=RoutingTask To is Missing
+ManufacturingRoutingTaskToMissing=Routing Task To is Missing
 ManufacturingRunMrp=Run MRP
-ManufacturingScrapFactor=Scap Factor
+ManufacturingScrapFactor=Scrap Factor
 ManufacturingStartDate=Start Date
 ManufacturingStartTime=Start Time
 ManufacturingSummarizedPartBreakdown=Summarized Breakdown
