A bunch more jpublish to screen conversions, should finish it up for the catalog manager; though still have some things to clean up and can get rid of
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4819 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -281,6 +281,8 @@ ProductCompanySubtitle=Part of the Open For Business Family of Open Source Softw
 ProductCompareAtPrice=Compare At
 ProductComponents=Components
 ProductConditions=Conditions
+ProductConfigItem=Config Item
+ProductConfigOptions=Config Options
 ProductConfirmSelectedMoves=Confirm selected moves
 ProductConfirmShipmentUps=Confirm Shipment with UPS
 ProductContactTypeInformation=Contact Type Information
