Cleaned up a few labels that could cause confusion. thanks to Les Austin for the bug report.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4834 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -5,7 +5,7 @@
 ManufacturingAddExistingRoutingTask=Add a existing RoutingTask
 ManufacturingAddProductionRunProductComponent=Add ProductComponent to ProductionRun
 ManufacturingAddRoutingTask=Add a RoutingTask
-ManufacturingAnyMachineGroup=Any Machine Group
+ManufacturingAnyMachineGroup=Any Fixed Asset Group
 ManufacturingATPDate=ATP Date
 ManufacturingBillOfMaterials=Bill Of Materials
 ManufacturingCalendar=Calendar
@@ -30,13 +30,13 @@ ManufacturingCompanySubtitle=Part of the Open For Business Family of Open Source
 ManufacturingCopyAndAddRoutingTask=Copy a routingTask and Add it
 ManufacturingCreateCalendar=Create calendar
 ManufacturingCreateCalendarWeek=Create Calendar Week
-ManufacturingCreateMachineGroup=Create a machine group
+ManufacturingCreateMachineGroup=Create a Fixed Asset group
 ManufacturingCreateProductionRun=Create a Production Run
 ManufacturingEditCalendarExceptionDayFor=Edit Calendar Exception day for
 ManufacturingEditCalendarExceptionWeekFor=Edit Calendar Exception week for
 ManufacturingEditCalendarWeek=Edit Week
-ManufacturingEditMachine=Edit machine
-ManufacturingEditMachineGroup=Edit MachineGroup
+ManufacturingEditMachine=Edit Fixed Asset
+ManufacturingEditMachineGroup=Edit Fixed AssetGroup
 ManufacturingEditProductBom=Edit BOM
 ManufacturingEditProductionRun=Edit Production Run
 ManufacturingEditRouting=Edit Routing
@@ -71,14 +71,15 @@ ManufacturingListCalendarWeek=List of weeks
 ManufacturingListingBomError=Error while listing the Bill of Material
 ManufacturingListOfProductionRunComponents=List Of ProductionRun Components
 ManufacturingListOfProductionRunRoutingTasks=List Of ProductionRun RoutingTasks
-ManufacturingMachineGroupIdAlreadyExist=Machine Group ID does'nt exist
-ManufacturingMachineGroupId=Machine group ID
-ManufacturingMachineGroup=Machine group
-ManufacturingMachineGroupPermissionError=Security Error\: to work on machine group you must have the MANUFACTURING_CREATE or MANUFACTURING_ADMIN permission <br>
-ManufacturingMachineIdAlreadyExist=MachineId already exist
-ManufacturingMachineId=Machine ID
-ManufacturingMachine=Machine
-ManufacturingMachinePermissionError=Security Error\: to work on machine you must have the MANUFACTURING_CREATE or MANUFACTURING_ADMIN permission <br>
+ManufacturingListRoutings=List Routings
+ManufacturingMachineGroupIdAlreadyExist=Fixed Asset Group ID does'nt exist
+ManufacturingMachineGroupId=Fixed Asset group ID
+ManufacturingMachineGroup=Fixed Asset group
+ManufacturingMachineGroupPermissionError=Security Error\: to work on Fixed Asset group you must have the MANUFACTURING_CREATE or MANUFACTURING_ADMIN permission <br>
+ManufacturingMachineIdAlreadyExist=Fixed AssetId already exist
+ManufacturingMachineId=Fixed Asset ID
+ManufacturingMachine=Fixed Asset
+ManufacturingMachinePermissionError=Security Error\: to work on Fixed Asset you must have the MANUFACTURING_CREATE or MANUFACTURING_ADMIN permission <br>
 ManufacturingMainPage=Manufacturing Manager Main Page
 ManufacturingMainPageNote=NOTE\: This application is currently in development. This page will change.
 ManufacturingManagerApplication=Manufacturing Manager Application
@@ -87,12 +88,12 @@ ManufacturingMrp=MRP
 ManufacturingMrpInitialisation=IEP init.
 ManufacturingNewCalendar=New calendar
 ManufacturingNewCalendarWeek=New Week
-ManufacturingNewMachineGroup=New machine group
+ManufacturingNewMachineGroup=New Fixed Asset group
 ManufacturingNewRequirement=New Requirement
 ManufacturingNewRouting=New Routing
 ManufacturingNewRoutingTask=New Routing Task
 ManufacturingNoCalendarFound=No calendar found
-ManufacturingNoMachineGroupFound=No machine group found
+ManufacturingNoMachineGroupFound=No Fixed Asset group found
 ManufacturingNoProductionRunSelected=No ProductionRun Selected
 ManufacturingProductLevel=Product Level
 ManufacturingProductAssocNotExist=ProductAssoc does not exist
@@ -118,7 +119,7 @@ ManufacturingProposedOrder=Proposed Order
 ManufacturingQuantity=Quantity
 ManufacturingQuantityMinimum=Quantity Minimum
 ManufacturingReason=Reason
-ManufacturingRequirements=Manufacturing Requirements
+ManufacturingRequirements=Requirements
 ManufacturingRequirementByDate=Manufacturing Requirement By Date
 ManufacturingRequirementId=RequirementId
 ManufacturingRequirementStartDate=Manufacturing Requirement Start Date
@@ -153,7 +154,7 @@ ManufacturingTimePeriod=Time Period
 ManufacturingTwoRoutingTaskWithSameSeqId=Two routing task with same SeqId and same period
 ManufacturingUpdateCalendar=Update Calendar
 ManufacturingUpdateCalendarWeek=Update Week
-ManufacturingUpdateMachineGroup=Update Machine Group
+ManufacturingUpdateMachineGroup=Update Fixed Asset Group
 ManufacturingViewPermissionError=You do not have permission to view this page. ("MANUFACTURING_VIEW" or "MANUFACTURING_ADMIN" needed)
 ManufacturingVisitType=Tree visit Algorithm
 ManufacturingWorkEffortNotExist=WorkEffort does not exist
@@ -200,15 +201,15 @@ PageTitleEditCalendar=Edit Calendar
 PageTitleEditCalendarExceptionDay=Edit Calendar Exception Day
 PageTitleEditCalendarExceptionWeek=Edit Calendar Exception Week
 PageTitleEditCalendarWeek=Edit Week
-PageTitleEditMachine=Edit machines
-PageTitleEditMachineGroup=Edit Machine Group
+PageTitleEditMachine=Edit Fixed Assets
+PageTitleEditMachineGroup=Edit Fixed Asset Group
 PageTitleEditProductManufacturingRules=Product Manufacturing Rules
 PageTitleEditRoutingProductLink=Edit Routing-Product Link
 PageTitleEditRoutingTaskAssoc=Edit Routing RoutingTask Association
 PageTitleFieldLookup=Field lookup
 PageTitleFindCalendar=Find Calendar
 PageTitleFindInventoryEventPlan=Find Inventory Event Planned
-PageTitleFindMachineGroup=Find Machine Group
+PageTitleFindMachineGroup=Find Fixed Asset Group
 PageTitleFindRouting=Find Routing
 PageTitleFindRoutingTask=Find - Edit Routing Task
 PageTitleListCalendarWeek=List of weeks
