update Shark debugging; implemented a way to sort the application bar using the tree map
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4841 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/base/config/debug.properties
+++ b/base/config/debug.properties
@@ -26,10 +26,10 @@ log4j.logger.org.ofbiz=ALL
 log4j.logger.org.ofbiz.minerva=WARN
 
 # Shark configuration
-log4j.logger.Persistence=ERROR
-log4j.logger.PackageEventLogger=ERROR
-log4j.logger.Shark=ERROR
-log4j.logger.org.ofbiz.shark=WARNING
+log4j.logger.Persistence=INFO
+log4j.logger.PackageEventLogger=INFO
+log4j.logger.Shark=INFO
+log4j.logger.org.ofbiz.shark=INFO
 
 # FTL/JP configuration
 log4j.logger.freemarker=ERROR
