Fixed very ugly order info page in the order manager when the ID passed in is not valid, also fixed bad use of a dot [.] in property name , will need to search for more of these, may be many of them with this problem, more stuff never tested; no ID problem reported by Rupunder Mazara
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4845 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -36,6 +36,7 @@ checkevents.not_enough_available_on_account=Not enough available on account \#{b
 checkevents.insufficient_credit_available_on_account=Insufficient credit available on accounts.
 checkevents.payment_not_cover_this_order=Selected payment methods will not cover this order.
 checkevents.invalid_amount_set_for_payment_method=Invalid amount set for Payment method.
+
 checkhelper.no_items_in_cart=There are no items in the cart.
 checkhelper.select_shipping_destination=Please Select a Shipping Destination.
 checkhelper.select_shipping_method=Please Select a Shipping Method.
@@ -62,7 +63,7 @@ checkhelper.problems_parsing_amount=Problems parsing amount.
 checkhelper.totals_do_not_match_order_total=Totals do not match order total.
 
 # ${order} =Errormessage
-checkhelper.sales_order_lines_lookup_failed=ERROR: Sales Order Lines lookup failed.
+checkhelper_sales_order_lines_lookup_failed=ERROR: Sales Order Lines lookup failed.
 checkhelpertotalsdonotmatchordertotal=Totals do not match order total.
 checkhelper.specify_if_shipBeforeDate_is_date=Please specify a ship before date as a date.
 checkhelper.specify_if_shipAfterDate_is_date=Please specify ship after date as a date.
