Improved the management of production run name (i.e. workEffortName): now the production run name is used to keep track of the origin of the production run (from MRP, from shipment plan).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4896 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -150,7 +150,7 @@ ManufacturingTaskPurpose=Task Type
 ManufacturingTechData=Tech. Data
 ManufacturingTechDataCalendarNotExist=TechDataCalendar does not exist
 ManufacturingTechDataCalendarWeekNotExist=TechDataCalendarWeek does not exist
-ManufacturingTimePeriod=Time Period
+ManufacturingMrpName=Mrp Name
 ManufacturingTwoRoutingTaskWithSameSeqId=Two routing task with same SeqId and same period
 ManufacturingUpdateCalendar=Update Calendar
 ManufacturingUpdateCalendarWeek=Update Week
