logon ID in backend system limited to the store to maintain, admin user access to all stores
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4897 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/specialized/opentravelsystem/webapp/hotelbackend/WEB-INF/web.xml
+++ b/specialized/opentravelsystem/webapp/hotelbackend/WEB-INF/web.xml
@@ -27,11 +27,11 @@
     <display-name>Open For Business - Hotel Webstore Backend application</display-name>
     <description>Demo Hotel applications of the Open Travel System Project</description>
     
-    <context-param>
+    <!--context-param>
         <param-name>webSiteId</param-name>
         <param-value>HotelDemoStore</param-value>
     <description>A unique ID used to look up the WebSite entity to get information about catalogs, etc.</description>
-    </context-param>
+    </context-param-->
     
     
     <context-param>
