--- a/website/svn/config
+++ b/website/svn/config
@@ -86,6 +86,7 @@ enable-auto-props = yes
 *.java       = svn:mime-type=text/plain;svn:eol-style=native;svn:keywords="Id Rev Author"
 *.bsh        = svn:mime-type=text/plain;svn:eol-style=native;svn:keywords="Id Rev Author"
 *.jsp        = svn:mime-type=text/plain;svn:eol-style=native;svn:keywords="Id Rev Author"
+*.tld        = svn:mime-type=text/xml;svn:eol-style=native;svn:keywords="Id Rev Author"
 *.ftl        = svn:mime-type=text/plain;svn:eol-style=native;svn:keywords="Id Rev Author"
 *.js         = svn:mime-type=text/plain;svn:eol-style=native;svn:keywords="Id Rev Author"
 *.sql        = svn:mime-type=text/plain;svn:eol-style=native;svn:keywords="Id Rev Author"
