Improvements to the quote to order process: * added "currencyUomId" to the Quote entity * now quoted items are put in the cart with the quoted price * quoted items are not mixed with non quoted items
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4902 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -163,6 +163,7 @@ OrderOrderNeedingAttention=Orders Needing Attention
 OrderOrderNumber=Order Number
 OrderOrderOptionSettings=Order Option Settings
 OrderOrderPurchaseToBeScheluded=Order Purchase To Be Scheluded
+OrderOrderQuotes=Quotes
 OrderOrderReturn=Return
 OrderOrderReturns=Returns
 OrderOrderShortcuts=Shortcuts
